[package]
name = "hare_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "hare_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile ="0.2.6"
spin = "0.9"
lazy_static = {version = "1.4", features = ["spin_no_std"]}
